Fix post content text wrap

--- a/client/src/app/components/blog/post/post.component.sass
+++ b/client/src/app/components/blog/post/post.component.sass
@@ -6,6 +6,9 @@
 	box-sizing: border-box
 	height: 100%
 
+	#post-wrapper
+		overflow-wrap: break-word
+
 	header
 		position: relative
 		background-color: $white
@@ -26,6 +29,7 @@
 			@include flex-column-center
 			position: relative
 			padding: 1rem
+			z-index: 1
 
 			& > *
 				z-index: 1
